# Eros.v2

./: .env.example  .gitignore  .replit  CNS_Companion_Test_Results.md  CNS_Complete_Feature_List.md  CNS_ENTERPRISE_API_DOCS.md  CNS_Emotional_Context_Learning_Implementation.md  CNS_Ink_Dye_Analysis_Report.md  CNS_Personality_Integration_Results.md  CNS_SYSTEM_OVERVIEW_INVESTOR_PRESENTATION.md  CNS_Technical_Overview.md  PRIVACY_POLICY.md  QUICK_START.md  README.md  TERMS_OF_SERVICE.md  VOICE_ASSISTANT_README.md  action_orchestrator.py  admin_dashboard.html  agentic_actions.py  autonomous_research_agent.py  cns_advanced_reasoning_assessment_1754919347.json  cns_advanced_reasoning_assessment_1755523077.json  cns_api_keys.json  cns_api_usage_validation_1754969254.json  cns_authenticity_breakthrough_report.json  cns_companion_state.json  cns_complete_subsystem_map.json  cns_comprehensive_diagnostic_20250828_125808.json  cns_current_flow_analysis.md  cns_database.py  cns_dependency_metrics.json  cns_diagnostic_20250828_125730.json  cns_diagnostic_20250828_125808.json  cns_direct_warmth_integration_1754921307.json  cns_emotional_warmth_integration_1754920772.json  cns_enterprise_api_keys.py  cns_enterprise_middleware.py  cns_ink_dye_trace.json  cns_logging_monitoring.py  cns_performance_scores.json  (+62 more)
API/: ENTERPRISE_API_SUMMARY.md  cns_api_usage_validation_1754969254.json  cns_enterprise_api_server.py
core/: cns_database.py  cns_diagnostic_20250828_125730.json  cognitive_learning_system.py  cognitive_orchestrator.py  context_judge.py  conversation_consistency_layer.py  (+25 more)
(+40 files in other folders)
